# mcoromanager

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mcoromanager/: main.py
src/mcoromanager/commands/: __init__.py  done.py  init.py  name.py
src/mcoromanager/core/: __init__.py  username.py
